# 2024-09-18-pybelfast-workshop

./: package-lock.json  package.json  pelicanconf.py  pyproject.toml  requirements.txt
.github/workflows/: check.yaml
custom/src/: _layout.css  _typography.css  bundle.css
custom/static/: bundle.css
custom/templates/: _base.html
theme/static/: main.css
